   branch annotation (__builtin_expect). This decreases the size of code that
   checks for errors and improves performance.

 - When printing compiler notes, instead of printing the macroexpanded form,
   ECL now prints the toplevel form, as follows
    ;;; Warning: in file src:lsp;autoload.lsp.NEWEST, position 1178 and top form
    ;;;   (DEFMACRO WITH-COMPILATION-UNIT (OPTIONS &REST BODY) ...)
    ;;; The variable OPTIONS is not used.

 - ECL now implements EXT:*INVOKE-DEBUGGER-HOOK*, which works like *DEBUGGER-HOOK*
   but is also observed by BREAK. (SBCL extension adopted by ECL)
 
 - The UFFI interface now supports C99 types, such as :int8-t, :uint32-t, etc,
   but only when the corresponding types do exist in the underlying C environment.

 - SOCKET-MAKE-STREAM defaults :BUFFERING to :FULL and allows three new keyword
   arguments, :INPUT, :OUTPUT and :EXTERNAL-FORMAT, as in SBCL.

 - COMPILE-FILE admits the keyword argument :EXTERNAL-FORMAT.

 - A new function EXT:ALL-ENCODINGS lists all encondings known to ECL.

 - Improved readability of compiler messages.

 - SERVE-EVENT now allows time resolution of less than one second.

 - The PROFILE package now has an alias, SB-PROFILE.

 - ECL now stores the location of its source files in a logical hostname,
   "SRC:", which points to the directory where Announcement is located.

 - When building ECL, if "etags" is installed, a file TAGS is created which
   contains references to the location of all C functions. This file can be
   used to locate functions from the core library in Slime, using M-.

 - Documentation files now allow for annotation of arbitrary symbols,
   based on a key and a sub-key which are both symbols.

 - New function EXT:FUNCTION-LAMBDA-LIST which currently only works with
   functions from the core ECL library, generic functions and interpreted
   functions.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***